// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Solid-Query exposeQueryKeys: true Should generate getKey for each query 1`] = `
"

export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;

export const createTestQuery = <
      TData = TestQuery,
      TError = unknown
    >(
      dataSource: { endpoint: string, fetchParams?: RequestInit },
      variables?: TestQueryVariables,
      options?: Omit<CreateQueryOptions<TestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateQueryOptions<TestQuery, TError, TData>['queryKey'] }
    ) => {
    
    return createQuery<TestQuery, TError, TData>(
      () => ({
    queryKey: variables === undefined ? ['test'] : ['test', variables],
    queryFn: fetcher<TestQuery, TestQueryVariables>(dataSource.endpoint, dataSource.fetchParams || {}, TestDocument, variables),
    ...options
  })
    )};

createTestQuery.getKey = (variables?: TestQueryVariables) => variables === undefined ? ['test'] : ['test', variables];

export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;

export const createTestMutation = <
      TError = unknown,
      TContext = unknown
    >(
      dataSource: { endpoint: string, fetchParams?: RequestInit },
      options?: CreateMutationOptions<TestMutation, TError, TestMutationVariables, TContext>
    ) => {
    
    return createMutation<TestMutation, TError, TestMutationVariables, TContext>(
      () => ({
    mutationKey: ['test'],
    mutationFn: (variables?: TestMutationVariables) => fetcher<TestMutation, TestMutationVariables>(dataSource.endpoint, dataSource.fetchParams || {}, TestDocument, variables)(),
    ...options
  })
    )};
"
`;

exports[`Solid-Query exposeQueryKeys: true, addInfiniteQuery: true Should generate getKey for each query - also infinite queries 1`] = `
"

export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;

export const createTestQuery = <
      TData = TestQuery,
      TError = unknown
    >(
      dataSource: { endpoint: string, fetchParams?: RequestInit },
      variables?: TestQueryVariables,
      options?: Omit<CreateQueryOptions<TestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateQueryOptions<TestQuery, TError, TData>['queryKey'] }
    ) => {
    
    return createQuery<TestQuery, TError, TData>(
      () => ({
    queryKey: variables === undefined ? ['test'] : ['test', variables],
    queryFn: fetcher<TestQuery, TestQueryVariables>(dataSource.endpoint, dataSource.fetchParams || {}, TestDocument, variables),
    ...options
  })
    )};

createTestQuery.getKey = (variables?: TestQueryVariables) => variables === undefined ? ['test'] : ['test', variables];

export const createInfiniteTestQuery = <
      TData = InfiniteData<TestQuery>,
      TError = unknown
    >(
      dataSource: { endpoint: string, fetchParams?: RequestInit },
      variables: TestQueryVariables,
      options: Omit<CreateInfiniteQueryOptions<TestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateInfiniteQueryOptions<TestQuery, TError, TData>['queryKey'] }
    ) => {
    
    return createInfiniteQuery<TestQuery, TError, TData>(
      (() => {
    const { queryKey: optionsQueryKey, ...restOptions } = options;
    return () => ({
      queryKey: optionsQueryKey ?? variables === undefined ? ['test.infinite'] : ['test.infinite', variables],
      queryFn: (metaData) => fetcher<TestQuery, TestQueryVariables>(dataSource.endpoint, dataSource.fetchParams || {}, TestDocument, {...variables, ...(metaData.pageParam ?? {})})(),
      ...restOptions
    }
  }))()
    )};

createInfiniteTestQuery.getKey = (variables?: TestQueryVariables) => variables === undefined ? ['test.infinite'] : ['test.infinite', variables];

export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;

export const createTestMutation = <
      TError = unknown,
      TContext = unknown
    >(
      dataSource: { endpoint: string, fetchParams?: RequestInit },
      options?: CreateMutationOptions<TestMutation, TError, TestMutationVariables, TContext>
    ) => {
    
    return createMutation<TestMutation, TError, TestMutationVariables, TContext>(
      () => ({
    mutationKey: ['test'],
    mutationFn: (variables?: TestMutationVariables) => fetcher<TestMutation, TestMutationVariables>(dataSource.endpoint, dataSource.fetchParams || {}, TestDocument, variables)(),
    ...options
  })
    )};
"
`;

exports[`Solid-Query exposeQueryRootKeys: true Should generate rootKey for each query 1`] = `
"

export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;

export const createTestQuery = <
      TData = TestQuery,
      TError = unknown
    >(
      dataSource: { endpoint: string, fetchParams?: RequestInit },
      variables?: TestQueryVariables,
      options?: Omit<CreateQueryOptions<TestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateQueryOptions<TestQuery, TError, TData>['queryKey'] }
    ) => {
    
    return createQuery<TestQuery, TError, TData>(
      () => ({
    queryKey: variables === undefined ? ['test'] : ['test', variables],
    queryFn: fetcher<TestQuery, TestQueryVariables>(dataSource.endpoint, dataSource.fetchParams || {}, TestDocument, variables),
    ...options
  })
    )};

createTestQuery.rootKey = 'test';

export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;

export const createTestMutation = <
      TError = unknown,
      TContext = unknown
    >(
      dataSource: { endpoint: string, fetchParams?: RequestInit },
      options?: CreateMutationOptions<TestMutation, TError, TestMutationVariables, TContext>
    ) => {
    
    return createMutation<TestMutation, TError, TestMutationVariables, TContext>(
      () => ({
    mutationKey: ['test'],
    mutationFn: (variables?: TestMutationVariables) => fetcher<TestMutation, TestMutationVariables>(dataSource.endpoint, dataSource.fetchParams || {}, TestDocument, variables)(),
    ...options
  })
    )};
"
`;

exports[`Solid-Query exposeQueryRootKeys: true, addInfiniteQuery: true Should generate rootKey for each query - also infinite queries 1`] = `
"

export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;

export const createTestQuery = <
      TData = TestQuery,
      TError = unknown
    >(
      dataSource: { endpoint: string, fetchParams?: RequestInit },
      variables?: TestQueryVariables,
      options?: Omit<CreateQueryOptions<TestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateQueryOptions<TestQuery, TError, TData>['queryKey'] }
    ) => {
    
    return createQuery<TestQuery, TError, TData>(
      () => ({
    queryKey: variables === undefined ? ['test'] : ['test', variables],
    queryFn: fetcher<TestQuery, TestQueryVariables>(dataSource.endpoint, dataSource.fetchParams || {}, TestDocument, variables),
    ...options
  })
    )};

createTestQuery.rootKey = 'test';

export const createInfiniteTestQuery = <
      TData = InfiniteData<TestQuery>,
      TError = unknown
    >(
      dataSource: { endpoint: string, fetchParams?: RequestInit },
      variables: TestQueryVariables,
      options: Omit<CreateInfiniteQueryOptions<TestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateInfiniteQueryOptions<TestQuery, TError, TData>['queryKey'] }
    ) => {
    
    return createInfiniteQuery<TestQuery, TError, TData>(
      (() => {
    const { queryKey: optionsQueryKey, ...restOptions } = options;
    return () => ({
      queryKey: optionsQueryKey ?? variables === undefined ? ['test.infinite'] : ['test.infinite', variables],
      queryFn: (metaData) => fetcher<TestQuery, TestQueryVariables>(dataSource.endpoint, dataSource.fetchParams || {}, TestDocument, {...variables, ...(metaData.pageParam ?? {})})(),
      ...restOptions
    }
  }))()
    )};

createInfiniteTestQuery.rootKey = 'test.infinite';

export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;

export const createTestMutation = <
      TError = unknown,
      TContext = unknown
    >(
      dataSource: { endpoint: string, fetchParams?: RequestInit },
      options?: CreateMutationOptions<TestMutation, TError, TestMutationVariables, TContext>
    ) => {
    
    return createMutation<TestMutation, TError, TestMutationVariables, TContext>(
      () => ({
    mutationKey: ['test'],
    mutationFn: (variables?: TestMutationVariables) => fetcher<TestMutation, TestMutationVariables>(dataSource.endpoint, dataSource.fetchParams || {}, TestDocument, variables)(),
    ...options
  })
    )};
"
`;

exports[`Solid-Query fetcher: custom-mapper Should generate mutation correctly with lazy variables: content 1`] = `
"

export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;

export const createTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      variables?: TTestQueryVariables,
      options?: Omit<CreateQueryOptions<TTestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateQueryOptions<TTestQuery, TError, TData>['queryKey'] }
    ) => {
    
    return createQuery<TTestQuery, TError, TData>(
      () => ({
    queryKey: variables === undefined ? ['test'] : ['test', variables],
    queryFn: useCustomFetcher<TTestQuery, TTestQueryVariables>(TestDocument).bind(null, variables),
    ...options
  })
    )};

export const createInfiniteTestQuery = <
      TData = InfiniteData<TTestQuery>,
      TError = unknown
    >(
      variables: TTestQueryVariables,
      options: Omit<CreateInfiniteQueryOptions<TTestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateInfiniteQueryOptions<TTestQuery, TError, TData>['queryKey'] }
    ) => {
    const query = useCustomFetcher<TTestQuery, TTestQueryVariables>(TestDocument)
    return createInfiniteQuery<TTestQuery, TError, TData>(
      (() => {
    const { queryKey: optionsQueryKey, ...restOptions } = options;
    return () => ({
      queryKey: optionsQueryKey ?? variables === undefined ? ['test.infinite'] : ['test.infinite', variables],
      queryFn: (metaData) => query({...variables, ...(metaData.pageParam ?? {})}),
      ...restOptions
    }
  }))()
    )};

export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;

export const createTestMutation = <
      TError = unknown,
      TContext = unknown
    >(options?: CreateMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>) => {
    
    return createMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      () => ({
    mutationKey: ['test'],
    mutationFn: useCustomFetcher<TTestMutation, TTestMutationVariables>(TestDocument),
    ...options
  })
    )};
"
`;

exports[`Solid-Query fetcher: custom-mapper Should generate mutation correctly with lazy variables: prepend 1`] = `
[
  "import { createQuery, createInfiniteQuery, createMutation, CreateQueryOptions, CreateInfiniteQueryOptions, InfiniteData, CreateMutationOptions } from '@tanstack/solid-query';",
  "import { useCustomFetcher } from './my-file';",
]
`;

exports[`Solid-Query fetcher: custom-mapper Should generate query correctly with external mapper: content 1`] = `
"

export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;

export const createTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      variables?: TTestQueryVariables,
      options?: Omit<CreateQueryOptions<TTestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateQueryOptions<TTestQuery, TError, TData>['queryKey'] }
    ) => {
    
    return createQuery<TTestQuery, TError, TData>(
      () => ({
    queryKey: variables === undefined ? ['test'] : ['test', variables],
    queryFn: myCustomFetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
    ...options
  })
    )};

export const createInfiniteTestQuery = <
      TData = InfiniteData<TTestQuery>,
      TError = unknown
    >(
      variables: TTestQueryVariables,
      options: Omit<CreateInfiniteQueryOptions<TTestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateInfiniteQueryOptions<TTestQuery, TError, TData>['queryKey'] }
    ) => {
    
    return createInfiniteQuery<TTestQuery, TError, TData>(
      (() => {
    const { queryKey: optionsQueryKey, ...restOptions } = options;
    return () => ({
      queryKey: optionsQueryKey ?? variables === undefined ? ['test.infinite'] : ['test.infinite', variables],
      queryFn: (metaData) => myCustomFetcher<TTestQuery, TTestQueryVariables>(TestDocument, {...variables, ...(metaData.pageParam ?? {})})(),
      ...restOptions
    }
  }))()
    )};

export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;

export const createTestMutation = <
      TError = unknown,
      TContext = unknown
    >(options?: CreateMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>) => {
    
    return createMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      () => ({
    mutationKey: ['test'],
    mutationFn: (variables?: TTestMutationVariables) => myCustomFetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables)(),
    ...options
  })
    )};
"
`;

exports[`Solid-Query fetcher: custom-mapper Should generate query correctly with external mapper: prepend 1`] = `
[
  "import { createQuery, createInfiniteQuery, createMutation, CreateQueryOptions, CreateInfiniteQueryOptions, InfiniteData, CreateMutationOptions } from '@tanstack/solid-query';",
  "import { myCustomFetcher } from './my-file';",
]
`;

exports[`Solid-Query fetcher: custom-mapper Should generate query correctly with internal mapper: content 1`] = `
"

export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;

export const createTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      variables?: TTestQueryVariables,
      options?: Omit<CreateQueryOptions<TTestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateQueryOptions<TTestQuery, TError, TData>['queryKey'] }
    ) => {
    
    return createQuery<TTestQuery, TError, TData>(
      () => ({
    queryKey: variables === undefined ? ['test'] : ['test', variables],
    queryFn: myCustomFetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
    ...options
  })
    )};

export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;

export const createTestMutation = <
      TError = unknown,
      TContext = unknown
    >(options?: CreateMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>) => {
    
    return createMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      () => ({
    mutationKey: ['test'],
    mutationFn: (variables?: TTestMutationVariables) => myCustomFetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables)(),
    ...options
  })
    )};
"
`;

exports[`Solid-Query fetcher: custom-mapper Should generate query correctly with internal mapper: prepend 1`] = `
[
  "import { createQuery, createMutation, CreateQueryOptions, CreateMutationOptions } from '@tanstack/solid-query';",
  null,
]
`;

exports[`Solid-Query fetcher: fetch Should generate query and mutation correctly: content 1`] = `
"

export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;

export const createTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      dataSource: { endpoint: string, fetchParams?: RequestInit },
      variables?: TTestQueryVariables,
      options?: Omit<CreateQueryOptions<TTestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateQueryOptions<TTestQuery, TError, TData>['queryKey'] }
    ) => {
    
    return createQuery<TTestQuery, TError, TData>(
      () => ({
    queryKey: variables === undefined ? ['test'] : ['test', variables],
    queryFn: fetcher<TTestQuery, TTestQueryVariables>(dataSource.endpoint, dataSource.fetchParams || {}, TestDocument, variables),
    ...options
  })
    )};

export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;

export const createTestMutation = <
      TError = unknown,
      TContext = unknown
    >(
      dataSource: { endpoint: string, fetchParams?: RequestInit },
      options?: CreateMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>
    ) => {
    
    return createMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      () => ({
    mutationKey: ['test'],
    mutationFn: (variables?: TTestMutationVariables) => fetcher<TTestMutation, TTestMutationVariables>(dataSource.endpoint, dataSource.fetchParams || {}, TestDocument, variables)(),
    ...options
  })
    )};
"
`;

exports[`Solid-Query fetcher: fetch Should generate query and mutation correctly: prepend 1`] = `
[
  "import { createQuery, createMutation, CreateQueryOptions, CreateMutationOptions } from '@tanstack/solid-query';",
  "
function fetcher<TData, TVariables>(endpoint: string, requestInit: RequestInit, query: string, variables?: TVariables) {
  return async (): Promise<TData> => {
    const res = await fetch(endpoint, {
      method: 'POST',
      ...requestInit,
      body: JSON.stringify({ query, variables }),
    });

    const json = await res.json();

    if (json.errors) {
      const { message } = json.errors[0];

      throw new Error(message);
    }

    return json.data;
  }
}",
]
`;

exports[`Solid-Query fetcher: graphql-request Should generate query correctly with client: content 1`] = `
"

export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;

export const createTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      client: GraphQLClient,
      variables?: TTestQueryVariables,
      options?: Omit<CreateQueryOptions<TTestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateQueryOptions<TTestQuery, TError, TData>['queryKey'] },
      headers?: RequestInit['headers']
    ) => {
    
    return createQuery<TTestQuery, TError, TData>(
      () => ({
    queryKey: variables === undefined ? ['test'] : ['test', variables],
    queryFn: fetcher<TTestQuery, TTestQueryVariables>(client, TestDocument, variables, headers),
    ...options
  })
    )};

export const createInfiniteTestQuery = <
      TData = InfiniteData<TTestQuery>,
      TError = unknown
    >(
      client: GraphQLClient,
      variables: TTestQueryVariables,
      options: Omit<CreateInfiniteQueryOptions<TTestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateInfiniteQueryOptions<TTestQuery, TError, TData>['queryKey'] },
      headers?: RequestInit['headers']
    ) => {
    
    return createInfiniteQuery<TTestQuery, TError, TData>(
      (() => {
    const { queryKey: optionsQueryKey, ...restOptions } = options;
    return () => ({
      queryKey: optionsQueryKey ?? variables === undefined ? ['test.infinite'] : ['test.infinite', variables],
      queryFn: (metaData) => fetcher<TTestQuery, TTestQueryVariables>(client, TestDocument, {...variables, ...(metaData.pageParam ?? {})}, headers)(),
      ...restOptions
    }
  }))()
    )};

export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;

export const createTestMutation = <
      TError = unknown,
      TContext = unknown
    >(
      client: GraphQLClient,
      options?: CreateMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>,
      headers?: RequestInit['headers']
    ) => {
    
    return createMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      () => ({
    mutationKey: ['test'],
    mutationFn: (variables?: TTestMutationVariables) => fetcher<TTestMutation, TTestMutationVariables>(client, TestDocument, variables, headers)(),
    ...options
  })
    )};
"
`;

exports[`Solid-Query fetcher: graphql-request Should generate query correctly with client: prepend 1`] = `
[
  "import { GraphQLClient } from 'graphql-request';",
  "import { RequestInit } from 'graphql-request/dist/types.dom';",
  "import { createQuery, createInfiniteQuery, createMutation, CreateQueryOptions, CreateInfiniteQueryOptions, InfiniteData, CreateMutationOptions } from '@tanstack/solid-query';",
  "
function fetcher<TData, TVariables extends { [key: string]: any }>(client: GraphQLClient, query: string, variables?: TVariables, requestHeaders?: RequestInit['headers']) {
  return async (): Promise<TData> => client.request({
    document: query,
    variables,
    requestHeaders
  });
}",
]
`;

exports[`Solid-Query fetcher: graphql-request with clientImportPath Should generate query correctly with client: content 1`] = `
"

export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;

export const createTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      variables?: TTestQueryVariables,
      options?: Omit<CreateQueryOptions<TTestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateQueryOptions<TTestQuery, TError, TData>['queryKey'] },
      headers?: RequestInit['headers']
    ) => {
    
    return createQuery<TTestQuery, TError, TData>(
      () => ({
    queryKey: variables === undefined ? ['test'] : ['test', variables],
    queryFn: fetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables, headers),
    ...options
  })
    )};

export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;

export const createTestMutation = <
      TError = unknown,
      TContext = unknown
    >(
      options?: CreateMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>,
      headers?: RequestInit['headers']
    ) => {
    
    return createMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      () => ({
    mutationKey: ['test'],
    mutationFn: (variables?: TTestMutationVariables) => fetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables, headers)(),
    ...options
  })
    )};
"
`;

exports[`Solid-Query fetcher: graphql-request with clientImportPath Should generate query correctly with client: prepend 1`] = `
[
  "import { client as graphqlClient } from 'client.ts';",
  "import { GraphQLClient } from 'graphql-request';",
  "import { RequestInit } from 'graphql-request/dist/types.dom';",
  "import { createQuery, createMutation, CreateQueryOptions, CreateMutationOptions } from '@tanstack/solid-query';",
  "
function fetcher<TData, TVariables extends { [key: string]: any }>(query: string, variables?: TVariables, requestHeaders?: RequestInit['headers']) {
  return async (): Promise<TData> => graphqlClient.request({
    document: query,
    variables,
    requestHeaders
  });
}",
]
`;

exports[`Solid-Query fetcher: hardcoded-fetch Should generate query correctly with fetch config and fetchParams object: content 1`] = `
"

export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;

export const createTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      variables?: TTestQueryVariables,
      options?: Omit<CreateQueryOptions<TTestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateQueryOptions<TTestQuery, TError, TData>['queryKey'] }
    ) => {
    
    return createQuery<TTestQuery, TError, TData>(
      () => ({
    queryKey: variables === undefined ? ['test'] : ['test', variables],
    queryFn: fetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
    ...options
  })
    )};

export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;

export const createTestMutation = <
      TError = unknown,
      TContext = unknown
    >(options?: CreateMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>) => {
    
    return createMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      () => ({
    mutationKey: ['test'],
    mutationFn: (variables?: TTestMutationVariables) => fetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables)(),
    ...options
  })
    )};
"
`;

exports[`Solid-Query fetcher: hardcoded-fetch Should generate query correctly with fetch config and fetchParams object: prepend 1`] = `
[
  "import { createQuery, createMutation, CreateQueryOptions, CreateMutationOptions } from '@tanstack/solid-query';",
  "
function fetcher<TData, TVariables>(query: string, variables?: TVariables) {
  return async (): Promise<TData> => {
    const res = await fetch("http://localhost:3000/graphql", {
    method: "POST",
    ...({"headers":{"Authorization":"Bearer XYZ"}}),
      body: JSON.stringify({ query, variables }),
    });

    const json = await res.json();

    if (json.errors) {
      const { message } = json.errors[0];

      throw new Error(message);
    }

    return json.data;
  }
}",
]
`;

exports[`Solid-Query fetcher: hardcoded-fetch Should generate query correctly with fetch config: content 1`] = `
"

export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;

export const createTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      variables?: TTestQueryVariables,
      options?: Omit<CreateQueryOptions<TTestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateQueryOptions<TTestQuery, TError, TData>['queryKey'] }
    ) => {
    
    return createQuery<TTestQuery, TError, TData>(
      () => ({
    queryKey: variables === undefined ? ['test'] : ['test', variables],
    queryFn: fetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
    ...options
  })
    )};

export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;

export const createTestMutation = <
      TError = unknown,
      TContext = unknown
    >(options?: CreateMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>) => {
    
    return createMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      () => ({
    mutationKey: ['test'],
    mutationFn: (variables?: TTestMutationVariables) => fetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables)(),
    ...options
  })
    )};
"
`;

exports[`Solid-Query fetcher: hardcoded-fetch Should generate query correctly with fetch config: prepend 1`] = `
[
  "import { createQuery, createMutation, CreateQueryOptions, CreateMutationOptions } from '@tanstack/solid-query';",
  "
function fetcher<TData, TVariables>(query: string, variables?: TVariables) {
  return async (): Promise<TData> => {
    const res = await fetch("http://localhost:3000/graphql", {
    method: "POST",
    ...({"headers":{"Authorization":"Bearer XYZ"}}),
      body: JSON.stringify({ query, variables }),
    });

    const json = await res.json();

    if (json.errors) {
      const { message } = json.errors[0];

      throw new Error(message);
    }

    return json.data;
  }
}",
]
`;

exports[`Solid-Query fetcher: hardcoded-fetch Should generate query correctly with hardcoded endpoint from env var: content 1`] = `
"

export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;

export const createTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      variables?: TTestQueryVariables,
      options?: Omit<CreateQueryOptions<TTestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateQueryOptions<TTestQuery, TError, TData>['queryKey'] }
    ) => {
    
    return createQuery<TTestQuery, TError, TData>(
      () => ({
    queryKey: variables === undefined ? ['test'] : ['test', variables],
    queryFn: fetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
    ...options
  })
    )};

export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;

export const createTestMutation = <
      TError = unknown,
      TContext = unknown
    >(options?: CreateMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>) => {
    
    return createMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      () => ({
    mutationKey: ['test'],
    mutationFn: (variables?: TTestMutationVariables) => fetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables)(),
    ...options
  })
    )};
"
`;

exports[`Solid-Query fetcher: hardcoded-fetch Should generate query correctly with hardcoded endpoint from env var: prepend 1`] = `
[
  "import { createQuery, createMutation, CreateQueryOptions, CreateMutationOptions } from '@tanstack/solid-query';",
  "
function fetcher<TData, TVariables>(query: string, variables?: TVariables) {
  return async (): Promise<TData> => {
    const res = await fetch(process.env.ENDPOINT_URL as string, {
    method: "POST",
      body: JSON.stringify({ query, variables }),
    });

    const json = await res.json();

    if (json.errors) {
      const { message } = json.errors[0];

      throw new Error(message);
    }

    return json.data;
  }
}",
]
`;

exports[`Solid-Query fetcher: hardcoded-fetch Should generate query correctly with hardcoded endpoint from just identifier: content 1`] = `
"

export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;

export const createTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      variables?: TTestQueryVariables,
      options?: Omit<CreateQueryOptions<TTestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateQueryOptions<TTestQuery, TError, TData>['queryKey'] }
    ) => {
    
    return createQuery<TTestQuery, TError, TData>(
      () => ({
    queryKey: variables === undefined ? ['test'] : ['test', variables],
    queryFn: fetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
    ...options
  })
    )};

export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;

export const createTestMutation = <
      TError = unknown,
      TContext = unknown
    >(options?: CreateMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>) => {
    
    return createMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      () => ({
    mutationKey: ['test'],
    mutationFn: (variables?: TTestMutationVariables) => fetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables)(),
    ...options
  })
    )};
"
`;

exports[`Solid-Query fetcher: hardcoded-fetch Should generate query correctly with hardcoded endpoint from just identifier: prepend 1`] = `
[
  "import { createQuery, createMutation, CreateQueryOptions, CreateMutationOptions } from '@tanstack/solid-query';",
  "
function fetcher<TData, TVariables>(query: string, variables?: TVariables) {
  return async (): Promise<TData> => {
    const res = await fetch(myEndpoint as string, {
    method: "POST",
      body: JSON.stringify({ query, variables }),
    });

    const json = await res.json();

    if (json.errors) {
      const { message } = json.errors[0];

      throw new Error(message);
    }

    return json.data;
  }
}",
]
`;

exports[`Solid-Query fetcher: hardcoded-fetch Should generate query correctly with hardcoded endpoint: content 1`] = `
"

export const TestDocument = \`
    query test {
  feed {
    id
    commentCount
    repository {
      full_name
      html_url
      owner {
        avatar_url
      }
    }
  }
}
    \`;

export const createTestQuery = <
      TData = TTestQuery,
      TError = unknown
    >(
      variables?: TTestQueryVariables,
      options?: Omit<CreateQueryOptions<TTestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateQueryOptions<TTestQuery, TError, TData>['queryKey'] }
    ) => {
    
    return createQuery<TTestQuery, TError, TData>(
      () => ({
    queryKey: variables === undefined ? ['test'] : ['test', variables],
    queryFn: fetcher<TTestQuery, TTestQueryVariables>(TestDocument, variables),
    ...options
  })
    )};

export const createInfiniteTestQuery = <
      TData = InfiniteData<TTestQuery>,
      TError = unknown
    >(
      variables: TTestQueryVariables,
      options: Omit<CreateInfiniteQueryOptions<TTestQuery, TError, TData>, 'queryKey'> & { queryKey?: CreateInfiniteQueryOptions<TTestQuery, TError, TData>['queryKey'] }
    ) => {
    
    return createInfiniteQuery<TTestQuery, TError, TData>(
      (() => {
    const { queryKey: optionsQueryKey, ...restOptions } = options;
    return () => ({
      queryKey: optionsQueryKey ?? variables === undefined ? ['test.infinite'] : ['test.infinite', variables],
      queryFn: (metaData) => fetcher<TTestQuery, TTestQueryVariables>(TestDocument, {...variables, ...(metaData.pageParam ?? {})})(),
      ...restOptions
    }
  }))()
    )};

export const TestDocument = \`
    mutation test($name: String) {
  submitRepository(repoFullName: $name) {
    id
  }
}
    \`;

export const createTestMutation = <
      TError = unknown,
      TContext = unknown
    >(options?: CreateMutationOptions<TTestMutation, TError, TTestMutationVariables, TContext>) => {
    
    return createMutation<TTestMutation, TError, TTestMutationVariables, TContext>(
      () => ({
    mutationKey: ['test'],
    mutationFn: (variables?: TTestMutationVariables) => fetcher<TTestMutation, TTestMutationVariables>(TestDocument, variables)(),
    ...options
  })
    )};
"
`;

exports[`Solid-Query fetcher: hardcoded-fetch Should generate query correctly with hardcoded endpoint: prepend 1`] = `
[
  "import { createQuery, createInfiniteQuery, createMutation, CreateQueryOptions, CreateInfiniteQueryOptions, InfiniteData, CreateMutationOptions } from '@tanstack/solid-query';",
  "
function fetcher<TData, TVariables>(query: string, variables?: TVariables) {
  return async (): Promise<TData> => {
    const res = await fetch("http://localhost:3000/graphql", {
    method: "POST",
      body: JSON.stringify({ query, variables }),
    });

    const json = await res.json();

    if (json.errors) {
      const { message } = json.errors[0];

      throw new Error(message);
    }

    return json.data;
  }
}",
]
`;

exports[`Solid-Query solidQueryImportFrom: custom-path Should import solid-query from custom path: prepend 1`] = `
[
  "import { createQuery, createMutation, CreateQueryOptions, CreateMutationOptions } from 'custom-solid-query';",
  "
function fetcher<TData, TVariables>(endpoint: string, requestInit: RequestInit, query: string, variables?: TVariables) {
  return async (): Promise<TData> => {
    const res = await fetch(endpoint, {
      method: 'POST',
      ...requestInit,
      body: JSON.stringify({ query, variables }),
    });

    const json = await res.json();

    if (json.errors) {
      const { message } = json.errors[0];

      throw new Error(message);
    }

    return json.data;
  }
}",
]
`;
